--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    	<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123969241-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-123969241-1');
+		</script>
+
+        <link rel="manifest" href="./manifest.json">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+        <meta name="theme-color" content="#333333" />
+
+        <link rel="apple-touch-icon-precomposed" sizes="57x57"
+              href="./icon/apple-touch-icon-57x57.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="114x114"
+              href="./icon/apple-touch-icon-114x114.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="72x72"
+              href="./icon/apple-touch-icon-72x72.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="144x144"
+              href="./icon/apple-touch-icon-144x144.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="60x60"
+              href="./icon/apple-touch-icon-60x60.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="120x120"
+              href="./icon/apple-touch-icon-120x120.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="76x76"
+              href="./icon/apple-touch-icon-76x76.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="152x152"
+              href="./icon/apple-touch-icon-152x152.png"/>
+        <link rel="icon" type="image/png" href="./icon/favicon-196x196.png" sizes="196x196"/>
+        <link rel="icon" type="image/png" href="./icon/favicon-96x96.png" sizes="96x96"/>
+        <link rel="icon" type="image/png" href="./icon/favicon-32x32.png" sizes="32x32"/>
+        <link rel="icon" type="image/png" href="./icon/favicon-16x16.png" sizes="16x16"/>
+        <link rel="icon" type="image/png" href="./icon/favicon-128.png" sizes="128x128"/>
+        <meta name="application-name" content="Vignesh Joglekar"/>
+        <meta name="msapplication-TileImage" content="./icon/mstile-144x144.png"/>
+        <meta name="msapplication-square70x70logo" content="./icon/mstile-70x70.png"/>
+        <meta name="msapplication-square150x150logo" content="./icon/mstile-150x150.png"/>
+        <meta name="msapplication-wide310x150logo" content="./icon/mstile-310x150.png"/>
+        <meta name="msapplication-square310x310logo" content="./icon/mstile-310x310.png"/>
 
         <!-- Page info -->
         <title>Vignesh Joglekar</title>
@@ -12,29 +51,8 @@
               content="Development Porfolio for Vignesh Joglekar, Texas A&M Class of '22. Find more about me, some of my recent work as well as how to contact me here.">
         <meta name="author" content="Vignesh Joglekar">
 
-        <link type="text/plain" rel="author" href="https://vigneshjoglekar.com/humans.txt">
-
-        <!-- Icons by:faviconomatic.com -->
-        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://vigneshjoglekar.com/icon/apple-touch-icon-57x57.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://vigneshjoglekar.com/icon/apple-touch-icon-114x114.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://vigneshjoglekar.com/icon/apple-touch-icon-72x72.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://vigneshjoglekar.com/icon/apple-touch-icon-144x144.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="60x60" href="https://vigneshjoglekar.com/icon/apple-touch-icon-60x60.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://vigneshjoglekar.com/icon/apple-touch-icon-120x120.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="https://vigneshjoglekar.com/icon/apple-touch-icon-76x76.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://vigneshjoglekar.com/icon/apple-touch-icon-152x152.png" />
-        <link rel="icon" type="image/png" href="https://vigneshjoglekar.com/icon/favicon-196x196.png" sizes="196x196" />
-        <link rel="icon" type="image/png" href="https://vigneshjoglekar.com/icon/favicon-96x96.png" sizes="96x96" />
-        <link rel="icon" type="image/png" href="https://vigneshjoglekar.com/icon/favicon-32x32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="https://vigneshjoglekar.com/icon/favicon-16x16.png" sizes="16x16" />
-        <link rel="icon" type="image/png" href="https://vigneshjoglekar.com/icon/favicon-128.png" sizes="128x128" />
-        <meta name="application-name" content="Vignesh Joglekar" />
-        <meta name="msapplication-TileImage" content="https://vigneshjoglekar.com/icon/mstile-144x144.png" />
-        <meta name="msapplication-square70x70logo" content="https://vigneshjoglekar.com/icon/mstile-70x70.png" />
-        <meta name="msapplication-square150x150logo" content="https://vigneshjoglekar.com/icon/mstile-150x150.png" />
-        <meta name="msapplication-wide310x150logo" content="https://vigneshjoglekar.com/icon/mstile-310x150.png" />
-        <meta name="msapplication-square310x310logo" content="https://vigneshjoglekar.com/icon/mstile-310x310.png" />
-        <!-- END ICONS -->
+        <link type="text/plain" rel="author" href="./humans.txt">
+        <link type="text/plain" rel="robots" href="./robots.txt">
 
     </head>
 
