Testing GA alternatives

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,28 @@
 <html lang="en">
     <head>
     	<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123969241-1"></script>
+		<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123969241-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
 
 		  gtag('config', 'UA-123969241-1');
-		</script>
+            </script> -->
+      <!-- GA END -->
+
+      <!-- GA TEST -->
+		<script async src="https://ga.vigneshjoglekar.com/a.js"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-123969241-1');
+            </script>
+      <!-- GA END -->
+
+
 
         <link rel="manifest" href="./manifest.json">
         <meta charset="UTF-8">
